syntax = "proto3";

package realoworld.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "kratos-realworld/api/realoworld/v1;v1";
//暂时用不到java相关的内容可以注释或删除
//option java_multiple_files = true;
//option java_package = "dev.kratos.api.realworld.v1";
//option java_outer_classname = "realoworldProtoV1";

// The greeting service definition.
service ContentService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/realworld/{name}"
    };
  }

  rpc WebSiteList(WebsiteRequest) returns(WebsiteReply){
    option (google.api.http) = {
      get:"/website/websiteList",
    };
  }
  rpc WebSiteHome(WebHomeRequest) returns(MultipleWebsiteReply){
    option (google.api.http) = {
      get:"/website/websiteHome",
    };
  }

  rpc CategoryList(CategoryRequest) returns (MultipleCategoryReply){
    option (google.api.http) = {
      get:"/category/CategoryList",
    };
  }

  rpc ArticleList(ArticleRequest) returns (ListArticleReply){
    option (google.api.http) = {
      get:"/article/ArticleList",
    };
  }

}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

//类别的请求参数
 message  CategoryRequest{
    int32 catePare=1;
}
message  CategoryReply{
  int64 ID=1;
  int64  ParentId=2;
  int32  CategoryId =3;
  string CategoryName=4;
  int32 Status=5;
}
message MultipleCategoryReply{
  message Categories{
    int64 ID=1;
    int64  ParentId=2;
    int32  CategoryId =3;
    string CategoryName=4;
    int32 Status=5;
  }
  repeated Categories category = 1;
}

// website 常规操作
message WebsiteRequest{
    int32 category=1;
    int32 type=2;
}
//公共的提取出来
message WebSite {
  int32 category=1;
  string websiteName=2;
  string websiteIcon=3;
  string websiteUrl=4;
  string summary=5;
}
message WebsiteReply{
    message CategoryName{
      string categoryName=1;
    }
    CategoryName categoryName=1;
    repeated WebSite website=2;
}
//首页的请求
message WebHomeRequest{
  int32 catePare=1;
}
message MultipleWebsiteReply{
  message WebsiteReply{
    string categoryName=1;
    repeated WebSite website=2;
  }
  repeated WebsiteReply websiteReply=1;
}
//文章
message ArticleRequest{
  int32 CurrentPage=1;
  int32 PageNumber=2;
}
message Article   {
  int64 id=1;
  int32 sortId=2;
  string name=3;
  int32 categoryId=4;
  string  recommend=5;
  string description=6;
  string contentBody=7;
  string imageUrl=8;
  int32   status=9;
  int32   clickCount=10;
  int32   likeCount=11;
  int64   CreateId=12;
  google.protobuf.Timestamp  CreateTime=13;
  int64   ModifyId =14;
  google.protobuf.Timestamp  ModifyTime=15;
}
message ListArticleReply{
  repeated Article article=1;
}